@@ -47,8 +47,7 @@ sub import {
 
   my $module_object = Test::File::ShareDir::Object::Module->new($params);
   $module_object->install_all_modules();
-  $module_object->add_to_inc();
-
+  $module_object->register();
   return 1;
 }
 
